--- a/margins.css
+++ b/margins.css
@@ -75,3 +75,13 @@ input::placeholder{
     font-size: -9rem;
 }
 
+table , td, tr{
+
+    border: 2px solid;
+    width: 1200px;
+    height: 50px;
+    text-align:center;
+    padding-right:2px;
+
+
+}
